@@ -4,6 +4,8 @@
 - Upgraded bundled Sqlite3 to version 3.7.0.1. (Ilia)
 - Upgraded bundled PCRE to version 8.10. (Ilia)
 
+- Added follow_location (enabled by default) option for the http stream support.
+  (Pierre)
 - Added new character sets to mysqlnd, which are available in MySQL 5.5
   (Andrey)
 
